fix(job): text overflow

--- a/src/app/components/dataDisplay/JobItem/index.scss
+++ b/src/app/components/dataDisplay/JobItem/index.scss
@@ -12,6 +12,8 @@
 	font-size: .9em;
 	margin-bottom: 15px;
 	overflow-wrap: break-word;
+	max-height: 56px;
+	overflow: hidden;
 }
 
 .job-item__small__info {
